@@ -34,7 +34,7 @@ class CourtSearch
         courts = Court.visible.by_area_of_law(@options[:area_of_law]).search(@query)
       end
     end
-    courts
+    courts.uniq
   end
 
   def lookup_council_name
@@ -72,7 +72,7 @@ class CourtSearch
       #For Bankruptcy, we do an additional check that the postcode matched court also has Bankruptcy listed as an area of law
       courts = Court.visible.by_postcode_court_mapping(@query, @options[:area_of_law])
     elsif area_of_law.type_children? || area_of_law.type_adoption? || area_of_law.type_divorce?
-      courts = Court.for_council(lookup_council_name, area_of_law)
+      courts = Court.for_council_and_area_of_law(lookup_council_name, area_of_law)
     end
 
     if latlng
