@@ -15,6 +15,7 @@
 * 66612298 - Warning for unassigned local authorities to Family court - Children
 * 66609784 - Search Family court for adoption application
 * 66609752 - Search Family court for divorce application
+* 67486836 - BUG: Multiple search results
 
 2.5.4
 ---------------------
